--- a/city.html
+++ b/city.html
@@ -1,1 +1,41 @@
 <select class="form-control" id="tg-city" name="tg-city" required=""><option disabled="disabled" selected="selected">الرجاء اختر مدينتك</option><option>القاهرة</option><option>الاسكندرية</option><option>مرسى مطروح</option><option>دمنهور</option><option>المنوفية</option><option>طنطا</option><option>المحلة الكبري</option><option>كفر الشيخ</option><option>شبين الكوم</option><option>المنصورة</option><option>دمياط</option><option>الزقازيق</option><option>بنها</option><option>الحسينية</option><option>فاقوس</option><option>دمياط الجديدة</option><option>الجيزة</option><option>6 اكتوبر</option><option>المنيا</option><option>بنى سويف</option><option>الفيوم</option><option>السويس</option><option>بور سعيد</option><option>الإسماعيلية</option><option>سوهاج</option><option>قنا</option><option>نجع حمدى</option><option>جرجا</option><option>البلينا</option><option>قوص</option><option>أسوان</option><option>أسيوط</option><option>القوصية</option><option>الأقصر</option><option>الخارجة</option><option>الغردقة</option><option>كفر الزيات</option><option>العبور</option><option>ملوى</option><option>طور سيناء</option><option>الداخله</option><option>كفر صقر</option><option>كفر الدوار</option></select>
+
+
+
+
+         <!-- Start year selection -->
+                <div class="px-2 flex justify-between w-full mt-2 sm:w-1/2 md:w-2/5">
+                    <div class="px-2 w-full">
+                        <label class="my-2 font-bold title">سنة الصنع:</label>
+                        <div class="flex flex-justify-between">
+                            <select class="w-full singleSelect" data-placeholder="من" name="yearFrom" id="salaryFrom">
+                                <option>شيء</option>
+                                <option>شيء </option>
+                            </select>
+                            <select class="w-full singleSelect" data-placeholder="إلى" name="yearTo" id="salaryTo">
+                                <option>شيء</option>
+                                <option>شيء </option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <!-- End year selection -->
+
+
+                
+                <!-- Start outfitType selection -->
+                <div class="w-full md:w-1/2 lg:w-1/3  my-2 px-2">
+                    <label class="my-2 inline-block font-bold title pl-2" for="outfitType">نوع الهيكل:</label>
+                    <div data-wrapper="outfitType">
+                        <select class="w-full singleSelect" name="outfitType" id="outfitType">
+                            <option>--اختر--</option>
+                            <option>لون</option>
+                            <option>لون</option>
+                            <option>لون</option>
+                            <option>لون</option>
+                            <option>لون</option>
+                        </select>
+                    </div>
+                    <p class="help-block help"> </p>
+                </div>
+                <!-- End outfitType selection -->
